--- a/dictionary/package.json
+++ b/dictionary/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
